# LeftistMonitor

./: .env.example  .gitignore  CLAUDE.md  DATA_GENERATION_SUMMARY.txt  DATA_GUIDE.md  GOALMAP_AND_FEATURES.md  LeftistMonitor_Documentation.docx  LeftistMonitor_Technology_Audit.docx  LeftistMonitor_Technology_Audit.js  README.md  ROADMAP.md  conflict_updates.sql  docker-compose.yml
backend/: Dockerfile  MOCK_API_README.md  README.md  mock_api.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003_add_conflict_frontlines.py  1c209624defd_merge_frontlines_and_relationships.py  2a3b4c5d6e7f_add_performance_indexes.py  3b4c5d6e7f8g_add_new_feature_tables.py  4c5d6e7f8g9h_add_occupation_liberation_tables.py  5a8a5d8270d0_add_politics_people_and_events_tables.py  6eaff32ca441_add_country_relationships.py  7d8e9f0g1h2i_add_users_table.py  8e9f0g1h2i3j_add_2fa_refresh_token_fields.py  9f0g1h2i3j4k_add_fulltext_search.py  addb0232adb3_initial_migration.py  (+2 more)
backend/migrations/: add_audit_log.sql
backend/scripts/: INDEX.md  QUICKSTART.md  SEED_DATA_README.md  SEED_DATA_SUMMARY.md  import_parlgov.py  seed_all.sh  seed_book_authors.py  seed_conflict_participants.py  seed_gaza.sql  seed_ideologies.sql  seed_labor.sql  seed_media.sql  seed_person_countries.py  seed_policies.sql  seed_research.sql  seed_topics.py  update_book_descriptions.sql  update_conflict_data.sql
backend/src/: __init__.py  api_docs.py  cache.py  config.py  database.py  main.py
backend/tests/: conftest.py  test_contributions.py  test_discussions.py  test_monitoring.py
(+592 files in other folders)
